--- a/website/public/index.html
+++ b/website/public/index.html
@@ -34,7 +34,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-storage.js"></script>
-    <script src="./audio.js"></script>
+
     <script>
         var firebaseConfig = {
             apiKey: "AIzaSyAUbKjdlvqribjszZnukDzDTcAhAkzibHE",
@@ -49,6 +49,8 @@
     </script>
 
     <script src="/scripts/auth.js"></script>
+    <script src="/audio.js"></script>
+    <script src="/scripts/chat.js"></script>
 </body>
 
 </html>
