--- a/website/public/index.html
+++ b/website/public/index.html
@@ -26,6 +26,8 @@
         };
         firebase.initializeApp(firebaseConfig);
     </script>
+
+    <img id="horn" src="./hornist.png" alt="go ahead"/>
 </body>
 
 </html>
