--- a/website/public/index.html
+++ b/website/public/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tooturself</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/google-signin.css">
+    <link rel="stylesheet" href="/styles/chat.css">
 </head>
 
 <body>
@@ -26,13 +29,19 @@
 
         <img id="horn" src="./hornist.png" alt="go ahead" />
 
-        <div class="chat-box">
-            <br /><br /<br />
-            <div id="messages"></div>
+        <br /><br /><br />
+
+        <div class="chat-box border rounded">
+
+            <div class="list-group" id="messages"></div>
             <div class="new-message">
-                <form id="new-messsage-form">
-                    <input name="message" type="text" id="new-message-input">
-                    <button type="submit">Submit</button>
+                <form id="new-message-form">
+                    <div class="form-group">
+                        <label for="new-message-input">Message</label>
+                        <input type="text" class="form-control" id="new-message-input" name="message">
+                        <small class="form-text text-muted">Up to 1000 characters.</small>
+                    </div>
+                    <button class="btn btn-primary" type="submit">Submit</button>
                 </form>
             </div>
         </div>
@@ -40,6 +49,16 @@
     </div>
 
 
+    <!-- Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-app.js"></script>
