--- a/website/public/index.html
+++ b/website/public/index.html
@@ -27,7 +27,7 @@
             <button onclick="boo.play(); doSignOut()">Logout</button>
         </div>
 
-        <img id="horn" src="./hornist.png" onmousedown="down()" onmouseup="up()" alt="go ahead" />
+        <img style="margin-left:auto; margin-right:auto" id="horn" src="./hornist.png" onmousedown="down()" onmouseup="up()" alt="go ahead" />
 
         <br /><br /><br />
 
