--- a/website/public/index.html
+++ b/website/public/index.html
@@ -28,10 +28,11 @@
         <div class="email_container">
             <span class="email"></span>
             <br />
-            <button onclick="boo.play(); doSignOut()">Logout</button>
+            <button class="btn btn-primary" onclick="boo.play(); doSignOut()">Logout</button>
         </div>
 
-        <img style="margin-left:auto; margin-right:auto" id="horn" src="./hornist.png" onmousedown="down()" onmouseup="up()" alt="go ahead" />
+        <img style="margin-left:auto; margin-right:auto" id="horn" src="./hornist.png" onmousedown="down()"
+            onmouseup="up()" alt="go ahead" />
 
         <br /><br /><br />
 
@@ -91,6 +92,7 @@
         };
         firebase.initializeApp(firebaseConfig);
         var firestore = firebase.firestore();
+        var storage = firebase.storage();
     </script>
     <script src="./scripts/auth.js"></script>
     <script src="./audio.js"></script>
