--- a/website/public/index.html
+++ b/website/public/index.html
@@ -25,16 +25,17 @@
         </a>
     </div>
     <div style="display: none" class="logged-in">
-        <div class="email_container">
+        <div class="email_container" style="background-color:#deb888; float:right; padding:10px">
             <span class="email"></span>
             <br />
             <button class="btn btn-primary" onclick="boo.play(); doSignOut()">Logout</button>
         </div>
 
-        <img style="margin-left:auto; margin-right:auto" id="horn" src="./hornist.png" onmousedown="down()"
-            onmouseup="up()" alt="go ahead" />
+        <img style="margin-left:auto; margin-right:auto" id="horn" src="sources/images/hornist.png" onmousedown="down()"
+            onmouseup="up()" alt="go ahead" class="rounded mx-auto d-block" />
+        <img class="rounded mx-auto d-block" id="chicken" src="sources/images/chicken.png" onmousedown="down()" onmouseup="up()" alt="go ahead" />
 
-        <br /><br /><br />
+<!--        <br /><br /><br />-->
 
         <div class="chat-box border rounded">
 
