--- a/website/public/index.html
+++ b/website/public/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tooturself</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Monoton&family=Orbitron&family=Press+Start+2P&family=Rock+Salt&family=Rubik+Mono+One&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/google-signin.css">
@@ -31,13 +34,14 @@
             <button class="btn btn-primary" onclick="click(0); doSignOut()">Logout</button>
         </div>
 
-        <img style="margin-left:auto; margin-right:auto" id="horn" src="sources/images/hornist.png" onmousedown="down(1)"
-            onmouseup="up()" alt="go ahead" class="rounded mx-auto d-block" />
-        <img class="rounded mx-auto d-block" id="chicken" src="sources/images/chicken.png" onmousedown="down(2)" onmouseup="up()" alt="go ahead" />
+        <img style="margin-left:auto; margin-right:auto" id="horn" src="sources/images/hornist.png"
+            onmousedown="down(1)" onmouseup="up()" alt="go ahead" class="rounded mx-auto d-block" />
+        <img class="rounded mx-auto d-block" id="chicken" src="sources/images/chicken.png" onmousedown="down(2)"
+            onmouseup="up()" alt="go ahead" />
 
-<!--        <br /><br /><br />-->
+        <!--        <br /><br /><br />-->
 
-        <div class="chat-box border rounded">
+        <div class="chat-box border rounded bg-light">
 
             <div class="list-group" id="messages"></div>
             <div class="new-message">
