--- a/website/public/index.html
+++ b/website/public/index.html
@@ -12,6 +12,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/google-signin.css">
     <link rel="stylesheet" href="./styles/chat.css">
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 
 <body style="background-image: url('./signin.png');">
@@ -44,14 +45,23 @@
             <div class="col">
                 <img id="quack" src="sources/images/quack.png" onmousedown="down(3)" onmouseup="up(3)" alt="go ahead" />
             </div>
-            <div class="col">
-                <button class="btn-outline-secondary" type="button" onclick="randomize()">Begin your
+            <div class="col custom_button_group">
+                <button class="btn btn-outline-secondary" type="button" onclick="randomize()">Begin your
                     performance</button>
-                <br />
-                <button class="btn-outline-secondary" type="button" onclick="down(4)">Request applause</button>
+                <!-- <br /> -->
+                <button class="btn btn-outline-secondary" type="button" onclick="down(4)">Request applause</button>
+            </div>
+        </div>
+        <br />
+        <div class="row">
+            <div style="margin-left: 30px;" class="col custom_button_group">
+                <button class="btn btn-primary" type="button" onclick="randomMeme()">Random Meme</button>
+                <button class="btn btn-outline-secondary" type="button" onclick="randomMeme(true)">Random HTTP Cat
+                    Meme</button>
             </div>
         </div>
         <div class="row">
+
             <img class="img-thumbnail" style="margin-left: 50px; max-width:400px" id="randomMeme" />
         </div>
 
