fixed buttons, added 3d effect

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -46,9 +46,10 @@
                 <img id="quack" src="sources/images/quack.png" onmousedown="down(3)" onmouseup="up(3)" alt="go ahead" />
             </div>
             <div class="col" style="text-align:center">
-                <button class="btn btn-dark" id="perform" type="button"
+                <button class="cool-3d-button btn btn-dark" id="perform" type="button"
                     style="padding-top:20px;padding-bottom: 20px; border-radius:25px" onclick="dim()">Begin your
                     performance</button>
+                <br />
                 <br />
                 <button class="btn btn-warning" id="clap" type="button" onclick="down(4); enlighten()" disabled>Request
                     applause</button>
