--- a/website/public/index.html
+++ b/website/public/index.html
@@ -56,17 +56,39 @@
             </div>
         </div>
         <br />
-        <div class="row">
-            <div style="margin-left: 30px;" class="col custom_button_group">
-                <button class="btn btn-primary" type="button" onclick="randomMeme()">Random Meme</button>
-                <button class="btn btn-outline-secondary" type="button" onclick="randomMeme(true)">Random HTTP Cat
-                    Meme</button>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm">
+                    <div class="row justify-content-center">
+                        <div style="margin-left: 30px" class="card">
+
+                            <div class="card-body">
+                                <h5 class="card-title"><span id="poke_name"></span> <span id="poke_id"></span></h5>
+                                <button class="btn btn-primary" type="button" onclick="randomMeme()">Random
+                                    Meme</button>
+                                <button class="btn btn-secondary" type="button" onclick="randomMeme(true)">Random HTTP
+                                    Cat
+                                    Meme</button>
+                            </div>
+                            <img id="randomMeme" style="max-width: 400px;" class="card-img-bottom">
+                        </div>
+                    </div>
+                </div>
+                <div id="randomPoke" class="col-sm">
+                    <div class="row">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title"><span id="poke_name"></span> <span id="poke_id"></span></h5>
+                                <button class="btn btn-primary" type="button" onclick="randomPokemon()">Random
+                                    Pokemon</button>
+                            </div>
+                            <img id="poke_img" class="card-img-bottom">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="row">
-
-            <img class="img-thumbnail" style="margin-left: 50px; max-width:400px" id="randomMeme" />
-        </div>
+        <br />
 
         <!--        <br /><br /><br />-->
 
