random pokemon after new chat item

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -43,7 +43,8 @@
                     onmouseup="up(2)" alt="go ahead" />
             </div>
             <div class="col">
-                <button class="btn btn-danger cooler-3d-button" type="button" onclick="down(Math.random()*4 << 0);">Random Sound</button>
+                <button class="btn btn-danger cooler-3d-button" type="button"
+                    onclick="down(Math.random()*4 << 0);">Random Sound</button>
             </div>
             <div class="col">
                 <img id="quack" src="sources/images/quack.png" onmousedown="down(3)" onmouseup="up(3)" alt="go ahead" />
