text to explain applause thing

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -56,7 +56,8 @@
                 <br />
                 <br />
                 <button class="btn btn-warning" id="clap" type="button" onclick="down(4); enlighten()" disabled>Request
-                    applause</button>
+                    applause</button><br />
+                <small class="text-muted">Request applause to end performance</small>
             </div>
         </div>
         <br />
