favicon, ping everyone when someone starts performance, reduced firestore reads

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -29,7 +29,7 @@
         </a>
     </div>
     <div style="display: none" class="logged-in">
-        <div class="email_container" style="background-color:#deb888; float:right; padding:10px">
+        <div class="email_container bg-light border border-dark border-rounded" style=" float:right; padding:10px">
             <span class="email"></span>
             <button class="btn btn-light" onclick="down(0); doSignOut()">Logout</button>
         </div>
